--- a/_config.yml
+++ b/_config.yml
@@ -7,35 +7,33 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: 钟欣然                          # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: 不忮不求不惧  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  这里是钟欣然的个人主页，有任何问题请和我联系吖 zhongxinran1998@126.com
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://zhongxinran.github.io'
 
-author: your_full_name                  # change to your full name
+author: 钟欣然                  # change to your full name
 
 avatar: /assets/img/sample/avatar.jpg   # support internet resources
 
 github:
-  username: github_username             # change to your github username
+  username: zhongxinran             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: zhongxinran                 # it will shows as the copyright owner in Footer
+  email: zhongxinran1998@126.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/zhongxinran       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -132,17 +130,17 @@ defaults:
       breadcrumb:
         -
           label: Posts
-  # -
-  #   scope:
-  #     path: tags
-  #   values:
-  #     breadcrumb:
-  #       -
-  #         label: Home
-  #         url: /
-  #       -
-  #         label: Tags
-  #         url: /tabs/tags/
+  -
+    scope:
+      path: tags
+    values:
+      breadcrumb:
+        -
+          label: Home
+          url: /
+        -
+          label: Tags
+          url: /tabs/tags/
   -
     scope:
       path: categories
